# omnigraph-agent

./: .gitignore  README.md  pyproject.toml  retry_build.sh
docs/: bridge-graph.md
src/omnigraph_agent/bridge/: __init__.py  batch_bridge_generator.py  bridge_context_generator.py  bridge_context_schema.py  example-linkset-nde-frink.ttl  graph_registry.py  linkset_builder.py  semantic_mappings.py  wobd_bridge_schema.ttl
src/omnigraph_agent/context_builder/: builder.py  cli.py
src/omnigraph_agent/context_builder/config/: biobricks-aopwiki.yaml  biobricks-tox21.yaml  biobricks-toxcast.yaml  biohealth.yaml  identifier-mappings.yaml  mondo.yaml  nde.yaml  spoke-genelab.yaml  spoke-okn.yaml  vbo.yaml
src/omnigraph_agent/context_builder/graphs/: __init__.py  base.py  generic.py  knowledge_graph.py  mondo.py  nde.py  ontology.py  vbo.py
src/omnigraph_agent/context_builder/model/: context_schema.py
